# artisan

./: .clangd  .gitignore  CMakeLists.txt
.zed/: debug.json  tasks.json
project/: icon.svg.import  project.godot
project/assets/fonts/: fusion-pixel-8px-monospaced-latin.ttf.import  fusion-pixel-8px-proportional-latin.ttf.import
project/assets/textures/characters/: wizard.png.import
project/assets/textures/environment/: environment.png.import  environment.res
project/assets/textures/tiles/: tile_atlas.png.import
project/assets/textures/voxel/: voxel_atlas.png.import  voxel_table.exr  voxel_table.exr.import
project/assets/ui/: theme.tres
project/scenes/: main.tscn
project/scenes/ui/: editor_ui.tscn
project/scripts/: generate_texture_array.gd  generate_texture_array.gd.uid  run.gd  run.gd.uid
project/scripts/ui/: editor_ui.gd  editor_ui.gd.uid  voxel_palette.gd  voxel_palette.gd.uid
project/shaders/: block.gdshader  tile.gdshader  tile.gdshader.uid  voxel_shader.gdshader
src/: gdexample.cpp  gdexample.h  register_types.cpp  register_types.h
src/core/: camera.h  gui.cpp  gui.h  main.cpp  main.h  world.cpp  world.h
src/entities/: entity.cpp  entity.h
src/game/: camera.cpp  camera.h  game.cpp  game.h
src/player/: player.cpp  player.h
src/tile_map/: tile_chunk.cpp  tile_chunk.h  tile_grid.h
src/voxel/: chunk.cpp  chunk.h  grid.h  voxel.h  voxel_chunk.cpp  voxel_chunk.h  voxel_column.cpp  voxel_column.h  voxel_grid.cpp  voxel_grid.h  voxel_mesh.cpp  voxel_mesh.h  voxel_metrics.cpp  voxel_metrics.h
src/voxel_map/: chunk.cpp  chunk.h
