cmake_minimum_required(VERSION 3.17)
set(GDEXTENSION_LIB_NAME artisan)

project(${GDEXTENSION_LIB_NAME} LANGUAGES C CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(GODOTCPP_USE_HOT_RELOAD ON CACHE BOOL "Godot hot reload")
set(GODOTCPP_PRECISION "single" CACHE STRING "Godot CPP precision")

add_subdirectory(godot-cpp)
file(GLOB_RECURSE SOURCES src/*.cpp)
add_library(${GDEXTENSION_LIB_NAME} SHARED ${SOURCES})
target_link_libraries(${GDEXTENSION_LIB_NAME} PRIVATE godot-cpp)
target_include_directories(${GDEXTENSION_LIB_NAME}
    PRIVATE
        ${CMAKE_SOURCE_DIR}/src
)

set_target_properties(${GDEXTENSION_LIB_NAME} PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/project/bin/${CMAKE_BUILD_TYPE}"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/project/bin/${CMAKE_BUILD_TYPE}"
    PDB_OUTPUT_DIRECTORY     "${CMAKE_SOURCE_DIR}/project/bin/${CMAKE_BUILD_TYPE}"
)
